--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -107,6 +107,13 @@
               <p></p>
             </a>
           </li>
+          <p style="margin-left:10px;">FARMING</p>
+          <li class="{% if 'rtl-support' in segment %} active {% endif %}">
+            <a href="/page-rtl-support.html">
+              <i></i>
+              <p></p>
+            </a>
+          </li>
           <li>
             <a href="{% url 'logout' %}" >
               <i class="tim-icons icon-button-power"></i>
