--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -36,6 +36,7 @@
   <link href="/static/assets/css/black-dashboard.css?v=1.0.0" rel="stylesheet" />
   <!-- CSS Just for demo purpose, don't include it in your project -->
   <link href="/static/assets/demo/demo.css" rel="stylesheet" />
+  
 
   <!-- Specific Page CSS goes HERE  -->
   {% block stylesheets %}{% endblock stylesheets %}
@@ -43,6 +44,7 @@
 </head>
 
 <body class="">
+  
   <div class="wrapper">
 
     {% include 'includes/sidebar.html' %}
@@ -70,7 +72,9 @@
   {% include 'includes/scripts-sidebar.html' %}
 
   <!-- Specific Page JS goes HERE  -->
-  {% block javascripts %}{% endblock javascripts %}
+  {% block javascripts %}
+  
+  {% endblock javascripts %}
 
 </body>
 
