--- a/apps/templates/accounts/login-new.html
+++ b/apps/templates/accounts/login-new.html
@@ -22,13 +22,35 @@
 <!--===============================================================================================-->
 	<link rel="stylesheet" type="text/css" href="/static/assets/css/util.css">
 	<link rel="stylesheet" type="text/css" href="/static/assets/css/main.css">
+<style>
+    .video-bg{
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        max-width: 100%;
+        min-height: 100;
+    }
+    .wrapper-tansparent{
+        width: 400px;
+        height:400px;
+        border-radius: 10px;
+        background: rgba(255, 255, 255, 0.5);
+        text-align: center;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+    }
+</style>
 {% endblock stylesheets %}
 
 {% block content %}
-
-<div class="limiter">
-    <div class="container-login100">
-        <div class="wrap-login100">
+<video src="/static/assets/video/video.mp4" class="video-bg" autoplay loop muted></video>
+<div class="wrapper-tansparent">
+   
+    <div >
+        <div>
+           
             <form role="form" method="post" action="" class="login100-form validate-form">
                 {% csrf_token %} 
                 <span class="login100-form-title p-b-26">
@@ -42,7 +64,7 @@
                     {% endif %}  
                 </h6>
                 <span class="login100-form-title p-b-48">
-                    <img src="/static/assets/img/agriverse-logo.jpg"/>
+                    <img src="/static/assets/img/logo-no-background_79.png"/>
                 </span>
 
                 <div class="wrap-input100 validate-input">
