--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -11,7 +11,7 @@
               </button>
             </div>
             <a class="navbar-brand" href="javascript:void(0)">
-              <img src="/static/assets/img/agriverse-logo-black.jpg"/>
+              <img src="/static/assets/img/logo-no-background_79.png"/>
             </a>
           </div>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-expanded="false" aria-label="Toggle navigation">
